# apigateway

./: CHANGELOG.md  README.md  pyproject.toml  server.py  testapp.html
core/: validation.py
src/apigateway/core/: validation.py
src/apigateway/core/adapters/: base_adapter.py  django.py  fastapi.py  flask.py  generic.py
src/apigateway/core/auth/: auth.py
src/apigateway/core/enums/: validation_modes.py
src/apigateway/core/rate_limit/: rate_limit_middleware.py
tests/: test_validation.py
tests/authorization/: test_auth_comprehensive.py
tests/ratelimiting/: test_rate_limiting.py
tests/validation/test_adapters/: test_django.py  test_fastapi.py  test_flask.py
tests/validation/test_generic/: test_error_handling.py  test_pre_post_validators.py  test_strict_vs_lax.py
