[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apigateway"
version = "1.0.0"
description = "API Gateway"
authors = [{ name = "PrabhBirJ" }]
requires-python = ">=3.11"
dependencies = ["pydantic>=2.11.7"]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1"
]

[tool.setuptools.packages.find]
where = ["src"]